# spin

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  benchmark.yml  ci.yml  coverage.yml  main.yml  release.yml  rust.yml  security.yml
benches/: lib.rs
src/: lib.rs  main.rs  serialization.rs
tests/: test_describe.rs
