[package]
name = "spin3d"
version = "0.1.0"

edition = "2021"
description = "3D rotation transformation in Rust"
license = "MIT" 
readme = "README.md"
homepage = "https://yourhomepage.com"
repository = "https://github.com/FulgurantFF/spin3d"
documentation = "https://docs.rs/rotation_processor"
keywords = ["rotation", "euler", "matrix", "csv"]
categories = ["mathematics", "file-format::csv"]

# Ensure a warning is emitted if the project has no `documentation` key.
warn-on-missing-docs = true

# Uncomment to include all files in the directory (excluding target/ and .git/)
# include = ["*"]

[dependencies]
nalgebra = { version = "0.29", features = ["serde-serialize"] }
serde_json = "1.0"
polars = { version = "0.17", features = ["full"] }

[build-dependencies]

[dev-dependencies]

[features]
default = []
