[package]
name = "spin3d"
version = "0.1.0"

edition = "2021"
description = "3D rotation transformation in Rust"
license = "MIT" 
readme = "README.md"
homepage = "https://yourhomepage.com"
repository = "https://github.com/FulgurantFF/spin3d"
documentation = "https://docs.rs/spin3d"
keywords = ["rotation", "euler", "matrix", "csv"]
categories = ["mathematics", "file-format::csv"]

[dependencies]
nalgebra = { version = "0.32", features = ["debug", "serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.187"
serde_json = "1.0"

[build-dependencies]

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
